# SWEA

./: .gitignore  README.md  SAMPLE_AGENTS.md  SAMPLE_config.toml  main.py  pyproject.toml
swea/: __init__.py  docker_vm.py
