[project]
name = "swea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use>=0.11.2",
    "docker>=7.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
main = "swea.docker_vm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
